--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
-baseurl: "https://rindakim.github.io"
-url : "https://RinDa525.github.io"
+baseurl: "https://RinDa525.github.io"
+url : "https://rindakim.github.io"
 
 # Blog Settings
 theme_settings :
