--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url : "https://rindakim.github.io"
 
 # Blog Settings
 theme_settings :
-  title : simple blog
+  title : Rinda Kim portfolio n tech blog
   favicon : assets/favicon.ico
 
   # Profile Settings
