--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 baseurl: ""
-url : "https://rindakim.github.io"
+url : "https://rinda525.github.io"
 
 # Blog Settings
 theme_settings :
